# AiRysZ-Agents

./: Cargo.toml  README.md  UPDATE.md
data/: safety_rules.json
src/: config.rs  lib.rs  main.rs  personality.rs
src/api/: mod.rs
src/commands/: character.rs  document.rs  food_cmd.rs  mod.rs  system.rs  web.rs
src/database/: database.rs  mod.rs  qdrant_config.rs  vector_db.rs
src/document/: mod.rs
src/food/: config.rs  mod.rs
src/food/analysis/: mod.rs  nutrition.rs
src/food/api/: mod.rs  spoonacular.rs  usda.rs
src/food/data/: recipes.rs
src/llm/: chat.rs  embeddings.rs  memory.rs  mod.rs  semantic_search.rs
src/providers/: mod.rs  traits.rs  utils.rs
src/providers/deepseek/: deepseek.rs
src/providers/document/: insights.rs  mod.rs
src/providers/gemini/: gemini.rs
src/providers/mistral/: mistral.rs
src/providers/openai/: openai.rs
src/providers/openrouter/: openrouter.rs
src/providers/twitter/: composer.rs
src/providers/web_crawler/: new_crawler.rs
